Update doc + add route api
